<resources>
    <string name="app_name">Fridge Meal Planner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Recipes</string>
    <string name="title_notifications">Meal Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="monday">Monday</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="generate_recipes">Generate Recipes</string>
    <string name="textview">TextView</string>
    <string name="fridgeprep">FRIDGEPREP</string>
    <string name="_1337">1337</string>
    <string name="todo">TODO</string>
    <string name="show_recipes">Show Recipes</string>
    <string-array name="selected_recipes">

    </string-array>
</resources>
