<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/mealplan"
                android:layout_width="268dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/meal_plan"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                app:layout_constraintBottom_toTopOf="@+id/mondaytext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/mondaytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/monday" />

            <TableLayout
                android:id="@+id/mondaytableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="43dp">

                    <TextView
                        android:id="@+id/breakfast1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/breakfast" />

                    <Spinner
                        android:id="@+id/mondaybreakfast"
                        android:layout_width="316dp"
                        android:layout_height="50dp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lunch1"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/lunch" />

                    <Spinner
                        android:id="@+id/mondaylunch"
                        android:layout_width="310dp"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dinner1"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/dinner" />

                    <Spinner
                        android:id="@+id/mondaydinner"
                        android:layout_width="310dp"
                        android:layout_height="50dp" />

                </TableRow>

            </TableLayout>

            <EditText
                android:id="@+id/tuesdaytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/tuesday" />

            <TableLayout
                android:id="@+id/tuesdaytableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/breakfast2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/breakfast" />

                    <Spinner
                        android:id="@+id/tuesdaybreakfast"
                        android:layout_width="316dp"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lunch2"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/lunch" />

                    <Spinner
                        android:id="@+id/tuesdaylunch"
                        android:layout_width="310dp"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dinner2"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/dinner" />

                    <Spinner
                        android:id="@+id/tuesdaydinner"
                        android:layout_width="310dp"
                        android:layout_height="50dp" />

                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/wednesdaytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/wednesday" />

            <TableLayout
                android:id="@+id/wednesdaytableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/breakfast3"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/breakfast" />

                    <Spinner
                        android:id="@+id/wednesdaybreakfast"
                        android:layout_width="316dp"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lunch3"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/lunch" />

                    <Spinner
                        android:id="@+id/wednesdaylunch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dinner3"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/dinner" />

                    <Spinner
                        android:id="@+id/wednesdaydinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/thursdaytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/thursday" />

            <TableLayout
                android:id="@+id/thursdaytablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/breakfast4"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/breakfast" />

                    <Spinner
                        android:id="@+id/thursdaybreakfast"
                        android:layout_width="316dp"
                        android:layout_height="match_parent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lunch4"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/lunch" />

                    <Spinner
                        android:id="@+id/thursdaylunch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dinner4"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/dinner" />

                    <Spinner
                        android:id="@+id/thursdaydinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/fridaytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/friday" />

            <TableLayout
                android:id="@+id/fridaytablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/breakfast5"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/breakfast" />

                    <Spinner
                        android:id="@+id/fridaybreakfast"
                        android:layout_width="316dp"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lunch5"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/lunch" />

                    <Spinner
                        android:id="@+id/fridaylunch"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dinner5"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/dinner" />

                    <Spinner
                        android:id="@+id/fridaydinner"
                        android:layout_width="match_parent"
                        android:layout_height="51dp" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/saturdaytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/saturday" />

            <TableLayout
                android:id="@+id/saturdaytablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/breakfast6"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/breakfast" />

                    <Spinner
                        android:id="@+id/saturdaybreakfast"
                        android:layout_width="316dp"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lunch6"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/lunch" />

                    <Spinner
                        android:id="@+id/saturdaylunch"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dinner6"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/dinner" />

                    <Spinner
                        android:id="@+id/saturdaydinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/sundaytext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/sunday" />

            <TableLayout
                android:id="@+id/sundaytablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/breakfast7"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/breakfast" />

                    <Spinner
                        android:id="@+id/sundaybreakfast"
                        android:layout_width="316dp"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/lunch7"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/lunch" />

                    <Spinner
                        android:id="@+id/sundaylunch"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/dinner7"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/dinner" />

                    <Spinner
                        android:id="@+id/sundaydinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>